# dynamic-bonding-curve

./: .gitignore  .mise.toml  .nycrc  Anchor.toml  BACKEND_TASKS.md  DEPLOYMENT.md  IPWORLD_DEV_SETUP.md  package-lock.json  package.json  tarpaulin.toml  tsconfig.json
programs/dynamic-bonding-curve/: Cargo.toml
programs/dynamic-bonding-curve/src/: access_control.rs  constants.rs  curve.rs  error.rs  event.rs  lib.rs
programs/dynamic-bonding-curve/src/instructions/: mod.rs
programs/dynamic-bonding-curve/src/instructions/admin/: auth.rs  ix_accept_ip_owner.rs  ix_accept_ipworld_admin.rs  ix_accept_ipworld_authority.rs  ix_accept_referral.rs  ix_close_operator_account.rs  ix_create_operator_account.rs  ix_init_ipworld_state.rs  ix_link_token_to_ip.rs  ix_set_ip_treasury.rs  ix_set_referral.rs  ix_transfer_ip_owner.rs  ix_update_ipworld_admin.rs  ix_update_ipworld_authority.rs  ix_verify_token.rs  mod.rs
programs/dynamic-bonding-curve/src/instructions/creator/: ix_claim_creator_trading_fee.rs  ix_transfer_pool_creator.rs  ix_withdraw_creator_surplus.rs  mod.rs
programs/dynamic-bonding-curve/src/instructions/harvest/: ix_harvest.rs  mod.rs
programs/dynamic-bonding-curve/src/instructions/initialize_pool/: ix_initialize_virtual_pool_with_spl_token.rs  ix_initialize_virtual_pool_with_token2022.rs  mod.rs
programs/dynamic-bonding-curve/src/instructions/migration/: ix_withdraw_migration_fee.rs  mod.rs  withdraw_leftover.rs
programs/dynamic-bonding-curve/src/instructions/migration/dynamic_amm_v2/: migrate_damm_v2_initialize_pool.rs  mod.rs
programs/dynamic-bonding-curve/src/instructions/operator/: ix_claim_airdrop_fee.rs  ix_claim_ip_owner_fee.rs  ix_claim_ip_treasury_fee.rs  ix_claim_protocol_fee.rs  ix_claim_token_airdrop_fee.rs  ix_zap_protocol_fee.rs  mod.rs
programs/dynamic-bonding-curve/src/instructions/partner/: ix_claim_partner_pool_creation_fee.rs  ix_claim_partner_trading_fee.rs  ix_create_config.rs  ix_withdraw_partner_surplus.rs  mod.rs
programs/dynamic-bonding-curve/src/instructions/swap/: ix_swap.rs
programs/dynamic-bonding-curve/src/math/: fee_math.rs
programs/dynamic-bonding-curve/src/migration_handler/: mod.rs
programs/dynamic-bonding-curve/src/params/: liquidity_distribution.rs
programs/dynamic-bonding-curve/src/state/: auth_structs.rs  config.rs  fee.rs  ipworld_state.rs  mod.rs  operator.rs  token_verification.rs  virtual_pool.rs
programs/dynamic-bonding-curve/src/tests/: mod.rs  test_create_config.rs  test_fee_distribution.rs  test_hook_id_wiring.rs  test_invalid_migrated_fee_config.rs  test_migration_fee.rs  test_operator_permission.rs  test_panic_defense.rs  test_total_supply.rs
programs/dynamic-bonding-curve/src/utils/: mod.rs  token.rs  verify_authority_sig.rs
programs/ip-owner-vault/: Cargo.toml
programs/ip-owner-vault/src/: constants.rs  error.rs  lib.rs  state.rs
programs/ip-owner-vault/src/instructions/: claim_vested.rs  distribute_to_vault.rs  mod.rs
programs/ipworld-hook/: Cargo.toml
programs/ipworld-hook/src/: errors.rs  lib.rs  state.rs
programs/ipworld-splitter/: Cargo.toml
programs/ipworld-splitter/src/: lib.rs
scripts/: addresses.devnet.env  addresses.mainnet.env  deploy-programs.sh  init-program-state.sh  set-program-ids.sh
tests/: build_graph_curve.tests.ts  claim_and_lock_lp_on_meteora_damm.tests.ts  claim_lp_on_meteora_damm.tests.ts  claim_protocol_liquidity_migration_fee.tests.ts  config_pool_creation_fee.tests.ts  create_config.tests.ts  create_locker.tests.ts  create_pool_with_token2022.tests.ts  create_virtual_pool_metadata.tests.ts  creator_claim_trading_fee.tests.ts  creator_transfer_settlement.tests.ts  design_curve.tests.ts  ed25519_security.tests.ts  fee_distribution.tests.ts  fee_swap.tests.ts  (+32 more)
(+47 files in other folders)
