[package]
name = "dynamic-bonding-curve"
version = "0.1.10"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_bonding_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# `local`: admin-auth bypass for the test pipeline ONLY (assert_eq_admin -> true).
# The test build is `anchor build -p dynamic_bonding_curve -- --features local`.
local = []
# `production`: SPEC-DBC-AUDIT-001 Phase 4 (REQ-D-002 / SEC-CORE-04). Explicit
# deploy signal — set ONLY for a real deploy build, NEVER by the test pipeline.
# Enabling `local` and `production` together is a compile error (see admin/auth.rs),
# so the test-only admin bypass can never leak into a deployed binary. A safe deploy
# build is `anchor build -p dynamic_bonding_curve -- --features production` (no local).
production = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true, features = [] }
const-crypto = "0.3.0"
bytemuck = { workspace = true, features = ["min_const_generics"] }
static_assertions = "1.1.0"
ruint = { workspace = true }
num-traits = "0.2.19"
num_enum = "0.7.0"
num = "0.4.3"
spl-token-metadata-interface = "0.6"
damm-v2 = { path = "../../libs/damm-v2" }
locker = { path = "../../libs/locker" }
unchecked_account = { git = "https://github.com/MeteoraAg/anchor-patches.git", rev = "ed053964b49b2832beb9891be0f5b353e2317777" }
spl-transfer-hook-interface = "0.9"
spl-tlv-account-resolution = "0.9"
# SPEC-DBC-AUDIT-001 Phase 3 (REQ-E-002, OQ-4): single source of truth for the
# ipworld-hook program id. DBC re-exports `ipworld_hook::ID` (the hook's own
# `declare_id!`) so the two can never diverge. No `cpi` feature: DBC hand-builds
# the hook `Instruction` (manual discriminator) and only needs the `ID` const.
# `no-entrypoint` so the hook's entrypoint is not linked into the DBC binary.
ipworld-hook = { path = "../ipworld-hook", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = "1.2.0"
rand = "0.9.2"
